tests/sawn/fixtures/invalid/22_duplicate_keys_nested.sawn
// INVALID: Duplicate keys within nested object
config{}
  host="localhost"
  port=8080
  host="other"
